[gd_scene load_steps=26 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Diamond.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hole.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/bensound-house.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/Mario_Jumping-Mike_Koenig.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/error_003.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/background/texture2.jpg" type="Texture" id=9]
[ext_resource path="res://DifficultyHUD.gd" type="Script" id=10]
[ext_resource path="res://WelcomeHUD.gd" type="Script" id=11]
[ext_resource path="res://GameOverHUD.gd" type="Script" id=14]
[ext_resource path="res://fonts/crackman/crackman.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://fonts/minecraft-evenings/Minecraft Evenings.otf" type="DynamicFontData" id=16]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_color = Color( 0.968627, 0.980392, 0.980392, 1 )
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 16 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
Enemy = ExtResource( 3 )
Hole = ExtResource( 5 )
Diamond = ExtResource( 4 )

[node name="GameOverHUD" type="CanvasLayer" parent="."]
script = ExtResource( 14 )

[node name="GameOver" type="Label" parent="GameOverHUD"]
visible = false
modulate = Color( 0.0361328, 0.0354271, 0.0354271, 1 )
anchor_right = 0.533
margin_left = 320.0
margin_top = 220.0
margin_right = 178.208
margin_bottom = 305.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "game over"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="GameOverHUD"]
visible = false
margin_left = 451.0
margin_top = 350.0
margin_right = 575.0
margin_bottom = 395.0
custom_fonts/font = SubResource( 2 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WelcomeHUD" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="GameName" type="Label" parent="WelcomeHUD"]
modulate = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
margin_left = 380.0
margin_top = 150.0
margin_right = 648.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 3 )
text = "Minion"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="WelcomeHUD"]
margin_left = 451.0
margin_top = 287.0
margin_right = 572.0
margin_bottom = 331.0
custom_fonts/font = SubResource( 4 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyButton" type="Button" parent="WelcomeHUD"]
margin_left = 455.0
margin_top = 347.0
margin_right = 585.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 5 )
text = "Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyHUD" type="CanvasLayer" parent="WelcomeHUD"]
script = ExtResource( 10 )

[node name="DifficultyLabel" type="Label" parent="WelcomeHUD/DifficultyHUD"]
visible = false
margin_left = 380.0
margin_top = 170.0
margin_right = 683.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="WelcomeHUD/DifficultyHUD"]
visible = false
margin_left = 486.0
margin_top = 266.0
margin_right = 540.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.952941, 0.913725, 0.0588235, 1 )
text = "Easy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="Button" parent="WelcomeHUD/DifficultyHUD"]
visible = false
margin_left = 474.48
margin_top = 315.0
margin_right = 556.48
margin_bottom = 349.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.168627, 0.698039, 0.278431, 1 )
text = "Normal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Button" parent="WelcomeHUD/DifficultyHUD"]
visible = false
margin_left = 486.0
margin_top = 363.014
margin_right = 544.0
margin_bottom = 397.014
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.65098, 0.12549, 0.12549, 1 )
text = "Hard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 518.735, 295.907 )
scale = Vector2( 1.10264, 1.01335 )
texture = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -48.7604, 261.452 )
z_index = 1

[node name="DiamondTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Enemies" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
modulate = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
anchor_right = 50.0
margin_left = 109.773
margin_top = -0.0594711
margin_right = 187.773
margin_bottom = 41.9405
custom_fonts/font = SubResource( 11 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true

[node name="DiamondSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = 3.0

[node name="GamerOverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="pressed" from="GameOverHUD/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="WelcomeHUD/StartGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="WelcomeHUD/DifficultyButton" to="WelcomeHUD" method="_on_DifficultyButton_pressed"]
[connection signal="pressed" from="WelcomeHUD/DifficultyHUD/Easy" to="WelcomeHUD" method="_on_Easy_pressed"]
[connection signal="pressed" from="WelcomeHUD/DifficultyHUD/Normal" to="WelcomeHUD" method="_on_Normal_pressed"]
[connection signal="pressed" from="WelcomeHUD/DifficultyHUD/Hard" to="WelcomeHUD" method="_on_Hard_pressed"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="DiamondTimer" to="." method="_on_Diamond_timeout"]
[connection signal="timeout" from="Enemies" to="." method="_on_Enemies_timeout"]
